<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bv1.fakultaet.MainActivity"
    android:background="@color/schwarz">

    <!-- Komponenten mit eigenem Format (Stil).-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel"
        android:id="@+id/textView"
        style="@style/Text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoText"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/info"
        style="@style/InfoText" />

    <!-- gewichtetes LinearLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            style="@style/Text"
            android:layout_weight="1"
            android:text="@string/n"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editN"
            android:layout_weight="1"
            style="@style/EingabeText"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/button"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonText"
        style="@style/Button"
        android:layout_alignParentStart="true" />

    <!-- gewichtetes LinearLayout-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fakultaet"
            android:id="@+id/textView5"
            style="@style/Text"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ausgabeFakultaet"
            style="@style/AusgabeText"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
